# formgenerator

./: .gitignore  CMakeLists.txt  README.md  config.json
examples/: CMakeLists.txt  main.cpp
examples/basic_app/: CMakeLists.txt  config.json  main.cpp
examples/test_app/: CMakeLists.txt  config.json  main.cpp
inc/FormGenerator/: Button.hpp  Constants.hpp  FormGenerator.hpp  TextBox.hpp  Title.hpp  Widget.hpp  WidgetManager.hpp
inc/FormGenerator/Backend/: Property.hpp  WidgetBinder.hpp
inc/FormGenerator/Utils/: Config.hpp  Json.hpp  Logger.hpp
include/: CMakeLists.txt
include/FormGenerator/: Button.hpp  Constants.hpp  FormGenerator.hpp  TextBox.hpp  Widget.hpp
lib/: CMakeLists.txt  libsfml-audio-d.2.6.dylib  libsfml-audio.2.6.0.dylib  libsfml-graphics-d.dylib  libsfml-graphics.2.6.dylib  libsfml-network-d.dylib  libsfml-network.2.6.dylib  libsfml-system-d.2.6.0.dylib  libsfml-system.2.6.dylib  libsfml-window-d.2.6.dylib  libsfml-window.2.6.0.dylib
src/: CMakeLists.txt
src/FormGenerator/: Button.cpp  FormGenerator.cpp  TextBox.cpp  Title.cpp  Widget.cpp  WidgetManager.cpp
src/FormGenerator/Backend/: Property.cpp  WidgetBinder.cpp
src/FormGenerator/Utils/: Config.cpp  Json.cpp
